observability/base/victoria-logs/httproute-vlcluster.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: victoria-logs
  namespace: observability
spec:
  parentRefs:
    - name: platform-tailscale
      namespace: infrastructure
  hostnames:
    - "vl.priv.${domain_name}"
  rules:
    - backendRefs:
        - name: victoria-logs-victoria-logs-cluster-vlselect
          port: 9471
