observability/base/victoria-logs/httproute-vlsingle.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: victoria-logs
  namespace: observability
spec:
  parentRefs:
    - name: platform-tailscale-general
      namespace: infrastructure
  hostnames:
    - "vl.priv.${domain_name}"
  rules:
    - backendRefs:
        - name: victoria-logs-victoria-logs-single-server
          port: 9428
